# flat-scanner

./: .pre-commit-config copy.yaml  README.md  pyproject.toml  requirements-dev.txt  sonar-project.properties
.github/workflows/: build.yml
flat_search/: residence.py
tests/e2e/: test_residences.py
tests/integration/: test_residences.py
tests/resources/: testpage.html  testpagewithduplicates.html
tests/unit/: conftest.py  helper.py  test_residence.py  test_residence_attributes.py
