[tool.poetry]
name = "flat-search"
version = "0.1.0"
description = ""
authors = ["Jon <joncpaske@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
beautifulsoup4 = "^4.12.3"
pre-commit = "^4.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pylint = "^3.3.3"
pytest-cov = "^6.0.0"
black = "^24.10.0"
isort = "^5.13.2"
requests = "^2.32.3"
pre-commit = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.messages_control]
max-line-length = 120